--- a/javascript/index.html
+++ b/javascript/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+
+    </style>
 </head>
+
 <body>
-    
+    <div class="counter">
+        <button onclick="minus();">-</button>
+        <span id="value">0</span>
+        <button onclick="plus();" >+</button>
+    </div>
+
+
 </body>
+
 </html>
+<script src="script.js"></script>
